syntax = "proto3";

package magicbox.api.v1;

import "google/api/annotations.proto";
import "buf/validate/validate.proto";
import "magicbox/enum/enum.proto";

option go_package = "github.com/aide-family/magicbox/api/v1;v1";
option java_multiple_files = true;
option java_package = "magicbox.api.v1";

service Member {
    rpc ListMember(ListMemberRequest) returns (ListMemberReply) {
        option (google.api.http) = {
            get: "/v1/members"
        };
    }
    rpc GetMember(GetMemberRequest) returns (MemberItem) {
        option (google.api.http) = {
            get: "/v1/member/{uid}"
        };
    }
    rpc SelectMember(SelectMemberRequest) returns (SelectMemberReply) {
        option (google.api.http) = {
            get: "/v1/members/select"
        };
    }
    rpc InviteMember(InviteMemberRequest) returns (InviteMemberReply) {
        option (google.api.http) = {
            post: "/v1/member/invite"
            body: "*"
        };
    }
    rpc DismissMember(DismissMemberRequest) returns (DismissMemberReply) {
        option (google.api.http) = {
            delete: "/v1/member/{uid}"
        };
    }
    rpc UpdateMemberStatus(UpdateMemberStatusRequest) returns (UpdateMemberStatusReply) {
        option (google.api.http) = {
            put: "/v1/member/{uid}/status"
            body: "*"
        };
    }
}

message MemberItem {
    int64 uid = 1;
    string email = 2;
    string phone = 3;
    magicbox.enum.MemberStatus status = 4;
    string createdAt = 5;
    string updatedAt = 6;
    int64 userUID = 7;
    string name = 8;
    string nickname = 9;
    string avatar = 10;
    string remark = 11;
    int64 namespaceUID = 12;
}

message SelectMemberItem {
    int64 value = 1;
    string label = 2;
    bool disabled = 3;
    string tooltip = 4;
}

message ListMemberRequest {
    int32 page = 1 [(buf.validate.field).required = true, (buf.validate.field).cel = {
        expression: "this >= 1",
        message: "page must be greater than or equal to 1",
    }];
    int32 pageSize = 2 [(buf.validate.field).required = true, (buf.validate.field).cel = {
        expression: "this >= 1 && this <= 200",
        message: "pageSize must be greater than or equal to 1 and less than or equal to 200",
    }];
    string keyword = 3 [(buf.validate.field).cel = {
        expression: "this.size() <= 200",
        message: "keyword must be less than or equal to 200",
    }];
    magicbox.enum.MemberStatus status = 4;
    int64 userUID = 5;
    string email = 6 [(buf.validate.field).cel = {
        expression: "this.size() <= 200",
        message: "email must be less than or equal to 200",
    }];
    string phone = 7 [(buf.validate.field).cel = {
        expression: "this.size() <= 200",
        message: "phone must be less than or equal to 200",
    }];
    repeated int64 uids = 8;
}
message ListMemberReply {
    repeated MemberItem items = 1;
    int64 total = 2;
    int32 page = 3;
    int32 pageSize = 4;
}

message GetMemberRequest {
    int64 uid = 1 [(buf.validate.field).required = true];
}

message SelectMemberRequest {
    string keyword = 1 [(buf.validate.field).cel = {
        expression: "this.size() <= 200",
        message: "keyword must be less than or equal to 200",
    }];
    int32 limit = 2 [(buf.validate.field).required = true, (buf.validate.field).cel = {
        expression: "this >= 1 && this <= 100",
        message: "limit must be greater than or equal to 1 and less than or equal to 100",
    }];
    int64 lastUID = 3;
    magicbox.enum.MemberStatus status = 4;
    repeated int64 uids = 5;
}
message SelectMemberReply {
    repeated SelectMemberItem items = 1;
    int64 total = 2;
    int64 lastUID = 3;
    bool hasMore = 4;
}


message InviteMemberRequest {
    string email = 1 [(buf.validate.field).required = true, (buf.validate.field).cel = {
      expression: "this.isEmail()",
      message: "email must be a valid email address",
    }];
    uint32 roleUID = 2;
}
message InviteMemberReply {
    string message = 1;
}

message DismissMemberRequest {
    int64 uid = 1 [(buf.validate.field).required = true];
}
message DismissMemberReply {
    string message = 1;
}

message UpdateMemberStatusRequest {
    int64 uid = 1 [(buf.validate.field).required = true];
    magicbox.enum.MemberStatus status = 2 [(buf.validate.field).required = true, (buf.validate.field).cel = {
        expression: "this in [magicbox.enum.MemberStatus.JOINED, magicbox.enum.MemberStatus.INVITED, magicbox.enum.MemberStatus.EXPIRED]",
        message: "status must be in ['JOINED', 'INVITED', 'EXPIRED']",
    }];
}
message UpdateMemberStatusReply {
    string message = 1;
}